# BMW-item

./: .gitignore  9_train.txt  BERT_SAMPLE.ipynb  Makefile  README.md  README_BERT_INTEGRATION.md  README_LOCAL_BERT.md  bert_sample.py  codex.md  log.txt  main.py  pyproject.toml  requirements.txt  test_bert_basic.py  test_bert_complete.py  test_bert_integration.py  test_bert_simple.py  test_local_bert.py  use_local_bert.py
.joycode/: prompt.json
.uv/: config.toml
log/: 10_eval.txt  10_train.txt  2_eval.txt  2_train.txt  7.md  7_eval.txt  7_train.txt  8_eval.txt  8_train.txt  9_eval.txt  9_train.txt
src/: 2025.py  5-fold.py  BERT.py  beacon.py  bert_lr_search.py  bert_wrapper.py  config_manager.py  data_split.py  error_handler.py  eval.py  eval_bert.py  eval_rerank.py  evaluation_tools.py  filter.py  filter_cli.py  filterd.py  learning_rate_monitor.py  miss_hit@10.py  model_manager.py  parse_rerank_log.py  predict.py  predict_bert.py  predict_multi_eval.py  rerank.py  tf_idf.py  tfidf_tune.py  train.py  train_bert.py  train_new.py  utils.py
test/: 2025.ipynb  34.ipynb  56.ipynb  BERT.py  bert.ipynb  data.ipynb  item-case.ipynb  test.ipynb  test.py  train_new.py  tune.ipynb
