[project]
name = "bmw-item"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
